--- a/Chart.yaml
+++ b/Chart.yaml
@@ -9,6 +9,6 @@ Keywords:
 Maintainers:
 - Email: agunin@kuberlab.com
   Name: Gunin Alexander
-Name: styles-transfer
+Name: deep-styles
 Version: 1.0.0
 Type: mlapp
